Fixes for scrolling on mobile
Now preventing overflow on sidebar open and enabling it on close to fix
scrolling on mobile.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,9 @@
 html,body {
     height: 100%;
     min-height: 100%;
+    width: 100%;
     font-family: Roboto;
+    position: fixed;
 }
 
 body {
